save working file 30/5

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -55,7 +55,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <EditText
-                android:id="@+id/create_acc_fullName"
+                android:id="@+id/create_acc_firstName"
                 android:layout_width="320dp"
                 android:layout_height="64dp"
                 android:layout_alignParentStart="true"
@@ -68,14 +68,15 @@
                 android:layout_marginRight="16dp"
                 android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
-                android:hint="@string/create_fullname_hint"
+                android:hint="@string/create_firstname_hint"
                 android:inputType="text"
+                android:paddingLeft="20sp"
                 android:textSize="@dimen/form_font_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
+            <TextView
                 android:id="@+id/create_acc_Birthday"
                 android:layout_width="320dp"
                 android:layout_height="64dp"
@@ -84,41 +85,45 @@
                 android:layout_alignParentLeft="true"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
+                android:gravity="center|left"
                 android:hint="@string/create_birthday_hint"
                 android:inputType="date"
+                android:paddingLeft="20sp"
                 android:textSize="@dimen/form_font_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/create_acc_ADDRESS" />
+                app:layout_constraintTop_toBottomOf="@+id/create_acc_Email" />
 
             <EditText
                 android:id="@+id/create_acc_Email"
                 android:layout_width="320dp"
                 android:layout_height="64dp"
-                android:layout_below="@+id/create_acc_fullName"
+                android:layout_below="@+id/create_acc_firstName"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/create_email_hint"
                 android:inputType="textEmailAddress"
+                android:paddingLeft="20sp"
                 android:textSize="@dimen/form_font_size"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.518"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/create_acc_fullName" />
+                app:layout_constraintTop_toBottomOf="@+id/create_acc_LastName" />
 
             <EditText
-                android:id="@+id/create_acc_ADDRESS"
+                android:id="@+id/create_acc_LastName"
                 android:layout_width="320dp"
                 android:layout_height="64dp"
                 android:layout_below="@+id/create_acc_Birthday"
@@ -126,34 +131,37 @@
                 android:layout_alignParentLeft="true"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
-                android:hint="@string/create_address_hint"
+                android:hint="@string/create_lastname_hint"
                 android:inputType="textPostalAddress"
+                android:paddingLeft="20sp"
                 android:textSize="@dimen/form_font_size"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.518"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/create_acc_Email" />
+                app:layout_constraintTop_toBottomOf="@+id/create_acc_firstName" />
 
             <EditText
                 android:id="@+id/create_Password"
                 android:layout_width="320dp"
                 android:layout_height="64dp"
-                android:layout_below="@+id/create_acc_ADDRESS"
+                android:layout_below="@+id/create_acc_LastName"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/create_password_hint1"
                 android:inputType="textPassword"
+                android:paddingLeft="20sp"
                 android:textSize="@dimen/form_font_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -163,18 +171,19 @@
                 android:id="@+id/create_Password2"
                 android:layout_width="320dp"
                 android:layout_height="64dp"
-                android:layout_below="@+id/create_acc_ADDRESS"
+                android:layout_below="@+id/create_acc_LastName"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/create_password_hint2"
                 android:inputType="textPassword"
+                android:paddingLeft="20sp"
                 android:textSize="@dimen/form_font_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
