--- a/app/src/main/res/layout/goals_item.xml
+++ b/app/src/main/res/layout/goals_item.xml
@@ -28,8 +28,10 @@
         android:id="@+id/goals_arrow"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginLeft="66dp"
-        android:layout_toRightOf="@id/goalsTitle"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="17dp"
+        android:layout_marginRight="17dp"
         android:contentDescription="desc"
         android:paddingLeft="10dp"
         android:paddingRight="10dp" />
