--- a/app/src/main/res/layout/time.xml
+++ b/app/src/main/res/layout/time.xml
@@ -5,21 +5,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background_nobar"
+    >
 
-    <Button
-        android:id="@+id/btnEnd"
-        android:layout_width="121dp"
-        android:layout_height="45dp"
+    <Switch
+        android:id="@+id/switcher"
+        android:layout_width="49dp"
+        android:layout_height="99dp"
+        android:layout_centerInParent="true"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="24Hour"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/startPick" />
+        android:rotation="90"
+        app:layout_constraintEnd_toStartOf="@+id/endPick"
+        app:layout_constraintStart_toEndOf="@+id/startPick"
+        app:layout_constraintTop_toBottomOf="@+id/subPick" />
 
     <NumberPicker
         android:id="@+id/startPick"
@@ -27,67 +30,91 @@
         android:layout_height="100dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/numpickbackground"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activityQuestion" />
+        app:layout_constraintTop_toBottomOf="@+id/subPick" />
 
     <NumberPicker
         android:id="@+id/endPick"
         android:layout_width="145dp"
         android:layout_height="100dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/numpickbackground"
         app:layout_constraintStart_toEndOf="@+id/startPick"
-        app:layout_constraintTop_toBottomOf="@+id/activityQuestion" />
+        app:layout_constraintTop_toBottomOf="@+id/subPick" />
 
     <Button
         android:id="@+id/selectTime"
-        android:layout_width="150dp"
+        android:layout_width="140dp"
         android:layout_height="100dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="28dp"
         android:layout_marginRight="28dp"
-        android:layout_marginBottom="160dp"
-        android:background="@drawable/textview_green_noborder"
+        android:background="@drawable/owl_button_bg_next"
+        android:drawableTop="@drawable/nextactivity"
+        android:paddingTop="10dp"
         android:text="Next Activity"
         android:textColor="@color/colorWhite"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/endPick" />
 
 
     <Button
         android:id="@+id/executeArray"
-        android:layout_width="150dp"
+        android:layout_width="140dp"
         android:layout_height="100dp"
-
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="48dp"
-        android:layout_marginRight="48dp"
-        android:layout_marginBottom="160dp"
-        android:background="@drawable/textview_red_noborder"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginRight="72dp"
+        android:background="@drawable/owl_button_bg"
+        android:drawableTop="@drawable/saveexit"
+        android:paddingTop="10dp"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
         android:text="Save and Exit"
         android:textColor="@color/colorWhite"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/selectTime" />
+        app:layout_constraintEnd_toStartOf="@+id/selectTime"
+        app:layout_constraintTop_toBottomOf="@+id/startPick" />
 
-    <TextView
-        android:id="@+id/activityQuestion"
-        android:layout_width="344dp"
-        android:layout_height="85dp"
+    <NumberPicker
+        android:id="@+id/catPick"
+        android:layout_width="350dp"
+        android:layout_height="145dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="TextView"
+        android:background="@drawable/numpickbackground"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.607"
+        app:layout_constraintHorizontal_bias="0.577"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <NumberPicker
+        android:id="@+id/subPick"
+        android:layout_width="350dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/numpickbackground"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/catPick" />
+
 
 </android.support.constraint.ConstraintLayout>
