--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,9 @@
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorWhiteSmoke">#F5F5F5</color>
+
+    <color name="colorGridGray">#A5A5A5</color>
+    <color name="colorGridMonth">#999999</color>
+
+
 </resources>
