--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -62,6 +62,7 @@
                 android:hint="@string/login_prompt_email"
                 android:inputType="textEmailAddress"
                 android:textSize="@dimen/form_font_size"
+                android:paddingLeft="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.506"
                 app:layout_constraintStart_toStartOf="parent"
@@ -103,6 +104,7 @@
                 android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/login_prompt_password"
+                android:paddingLeft="20sp"
                 android:inputType="textPassword"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
