--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -120,6 +120,29 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.518"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/create_acc_userName" />
+
+            <EditText
+                android:id="@+id/create_acc_userName"
+                android:layout_width="320dp"
+                android:layout_height="64dp"
+                android:layout_below="@+id/create_acc_firstName"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:ems="10"
+                android:hint="@string/create_username_hint"
+                android:inputType="textEmailAddress"
+                android:paddingLeft="20sp"
+                android:textSize="@dimen/form_font_size"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.518"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/create_acc_LastName" />
 
             <EditText
