--- a/app/src/main/res/layout/phone.xml
+++ b/app/src/main/res/layout/phone.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+*********************************************
+* CSIT321 - Prepareo
+* Author/s:		David, Alec, Lachlan, Connor, Adam
+*********************************************
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
