--- a/app/src/main/res/layout/assignments_popup.xml
+++ b/app/src/main/res/layout/assignments_popup.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+*********************************************
+* CSIT321 - Prepareo
+* Author/s:		David, Alec, Lachlan, Connor, Adam
+*********************************************
+-->
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,123 +12,120 @@
     android:layout_height="match_parent"
     android:fadingEdge="horizontal|vertical"
     android:scrollbars="vertical"
-    android:background="@drawable/textview_border"
+    android:background="@drawable/background_nobar"
     android:id="@+id/assignments_popUp_layout"
     >
 
-    <ScrollView
-        android:id="@+id/assignments_scrollView3"
-        android:layout_width="358dp"
-        android:layout_height="688dp"
-        android:scrollbarStyle="insideOverlay"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+    <EditText
+        android:id="@+id/ed_assignments_Weight"
+        android:layout_width="320dp"
+        android:layout_height="64dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:ems="10"
+        android:gravity="center|left"
+        android:hint="@string/assignments_str_Weight"
+        android:inputType="text"
+        android:paddingLeft="20dp"
+        android:textSize="@dimen/form_font_size"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.221">
+        app:layout_constraintTop_toBottomOf="@+id/ed_assignments_Name" />
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="350dp">
+    <TextView
+        android:id="@+id/ed_assignments_dueDate"
+        android:layout_width="320dp"
+        android:layout_height="64dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:ems="10"
+        android:gravity="center|left"
+        android:hint="Assignment Due Date"
+        android:inputType="text"
+        android:paddingLeft="20dp"
+        android:textSize="@dimen/form_font_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ed_assignments_mark" />
 
-            <EditText
-                android:id="@+id/ed_assignments_Weight"
-                android:layout_width="260dp"
-                android:layout_height="50dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentTop="false"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@drawable/textview_border"
-                android:ems="10"
-                android:hint="@string/assignments_str_Weight"
-                android:inputType="text"
-                android:textSize="@dimen/form_font_size"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.484"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ed_assignments_Name" />
+    <EditText
+        android:id="@+id/ed_assignments_mark"
+        android:layout_width="320dp"
+        android:layout_height="64dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:ems="10"
+        android:gravity="center|left"
+        android:hint="Assignment Mark"
+        android:inputType="text"
+        android:text="0"
+        android:paddingLeft="20dp"
+        android:textSize="@dimen/form_font_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ed_assignments_Weight" />
 
-            <EditText
-                android:id="@+id/ed_assignments_Name"
-                android:layout_width="260dp"
-                android:layout_height="50dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentTop="false"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@drawable/textview_border"
-                android:ems="10"
-                android:hint="@string/assignments_str_Name"
-                android:inputType="text"
-                android:textSize="@dimen/form_font_size"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.484"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/assignments_heading" />
+    <EditText
+        android:id="@+id/ed_assignments_Name"
+        android:layout_width="320dp"
+        android:layout_height="64dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:ems="10"
+        android:gravity="center|left"
+        android:hint="@string/assignments_str_Name"
+        android:inputType="text"
+        android:paddingLeft="20dp"
+        android:textSize="@dimen/form_font_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-            <Button
-                android:id="@+id/assignments_btn_save"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="60dp"
-                android:layout_marginLeft="60dp"
-                android:layout_marginTop="24dp"
-                android:background="@drawable/textview_green_noborder"
-                android:text="@string/notification_btn_save"
-                android:textColor="@color/colorWhite"
-                app:layout_constraintStart_toEndOf="@+id/assignments_btn_close"
-                app:layout_constraintTop_toBottomOf="@+id/ed_assignments_Weight" />
+    <Button
+        android:id="@+id/assignments_btn_save"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginLeft="152dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/textview_green_noborder"
+        android:text="@string/notification_btn_save"
+        android:textColor="@color/colorWhite"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ed_assignments_dueDate" />
 
-            <Button
-                android:id="@+id/assignments_btn_close"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="48dp"
-                android:layout_marginLeft="48dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="60dp"
-                android:layout_marginRight="60dp"
-                android:background="@drawable/textview_red_noborder"
-                android:text="@string/notification_btn_close"
-                android:textColor="@color/colorWhite"
-                app:layout_constraintEnd_toStartOf="@+id/assignments_btn_save"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ed_assignments_Weight" />
-
-            <EditText
-                android:id="@+id/assignments_heading"
-                android:layout_width="260dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="100dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@android:color/transparent"
-                android:clickable="false"
-                android:editable="false"
-                android:ems="10"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:inputType="none"
-                android:text="Add Assignment"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </android.support.constraint.ConstraintLayout>
-    </ScrollView>
 </android.support.constraint.ConstraintLayout>
