--- a/app/src/main/res/layout/notification_popup.xml
+++ b/app/src/main/res/layout/notification_popup.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+*********************************************
+* CSIT321 - Prepareo
+* Author/s:		David, Alec, Lachlan, Connor, Adam
+*********************************************
+-->
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,195 +12,146 @@
     android:layout_height="match_parent"
     android:fadingEdge="horizontal|vertical"
     android:scrollbars="vertical"
-    android:background="@drawable/textview_border"
+    android:background="@drawable/background_nobar"
     android:id="@+id/notification_popUp_layout"
     >
 
-    <ScrollView
-        android:id="@+id/scrollView3"
-        android:layout_width="358dp"
-        android:layout_height="688dp"
-        android:scrollbarStyle="insideOverlay"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+    <EditText
+        android:id="@+id/notification_Name"
+        android:layout_width="320dp"
+        android:layout_height="64dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:ems="10"
+        android:hint="@string/notification_name"
+        android:inputType="text"
+        android:paddingLeft="20dp"
+        android:textSize="@dimen/form_font_size"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.221">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="700dp">
+    <TextView
+        android:id="@+id/notification_frequency"
+        android:layout_width="320dp"
+        android:layout_height="64dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:ems="10"
+        android:gravity="center|left"
+        android:hint="@string/notification_frequency"
+        android:inputType="text"
+        android:paddingLeft="20dp"
+        android:textSize="@dimen/form_font_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/notification_Name" />
 
-            <EditText
-                android:id="@+id/notification_Name"
-                android:layout_width="280dp"
-                android:layout_height="50dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentTop="false"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@android:drawable/dialog_holo_light_frame"
-                android:ems="10"
-                android:hint="@string/notification_name"
-                android:inputType="text"
-                android:textSize="@dimen/form_font_size"
-
-
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/subjects_heading" />
-
-            <EditText
-                android:id="@+id/notification_frequency"
-                android:layout_width="280dp"
-                android:layout_height="50dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentTop="false"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@android:drawable/dialog_holo_light_frame"
-                android:ems="10"
-                android:hint="@string/notification_frequency"
-                android:inputType="text"
-                android:textSize="@dimen/form_font_size"
+    <TextView
+        android:id="@+id/notification_endDate"
+        android:layout_width="320dp"
+        android:layout_height="64dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:ems="10"
+        android:gravity="center|left"
+        android:hint="@string/notification_endDate"
+        android:inputType="date"
 
 
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/notification_Name" />
+        android:paddingLeft="20dp"
+        android:textSize="@dimen/form_font_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/notification_startDate" />
 
-            <EditText
-                android:id="@+id/notification_endDate"
-                android:layout_width="280dp"
-                android:layout_height="50dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentTop="false"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@android:drawable/dialog_holo_light_frame"
-                android:ems="10"
-                android:hint="@string/notification_endDate"
-                android:inputType="date"
-                android:textSize="@dimen/form_font_size"
-
-
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/notification_startDate" />
-
-            <EditText
-                android:id="@+id/notification_startDate"
-                android:layout_width="280dp"
-                android:layout_height="50dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentTop="false"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@android:drawable/dialog_holo_light_frame"
-                android:ems="10"
-                android:hint="@string/notification_startDate"
-                android:inputType="date"
-                android:textSize="@dimen/form_font_size"
+    <TextView
+        android:id="@+id/notification_startDate"
+        android:layout_width="320dp"
+        android:layout_height="64dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:ems="10"
+        android:gravity="center|left"
+        android:hint="@string/notification_startDate"
+        android:inputType="date"
 
 
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/notification_frequency" />
+        android:paddingLeft="20dp"
+        android:textSize="@dimen/form_font_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/notification_frequency" />
 
-            <EditText
-                android:id="@+id/notification_msg"
-                android:layout_width="280dp"
-                android:layout_height="50dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentTop="false"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@android:drawable/dialog_holo_light_frame"
-                android:ems="10"
-                android:hint="@string/notification_msg"
-                android:inputType="text"
-                android:textSize="@dimen/form_font_size"
+    <EditText
+        android:id="@+id/notification_msg"
+        android:layout_width="318dp"
+        android:layout_height="112dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:ems="10"
+        android:gravity="top|left"
+        android:hint="@string/notification_msg"
+        android:inputType="text"
 
 
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/notification_endDate" />
+        android:paddingLeft="20dp"
+        android:paddingTop="20dp"
+        android:textSize="@dimen/form_font_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/notification_endDate" />
 
-            <Button
-                android:id="@+id/subjects_btn_save"
-                android:layout_width="100dp"
-                android:layout_height="60dp"
-                android:layout_marginStart="60dp"
-                android:layout_marginLeft="60dp"
-                android:layout_marginTop="32dp"
-                android:background="@drawable/textview_green_noborder"
-                android:text="@string/notification_btn_save"
-                android:textColor="@color/colorWhite"
+    <Button
+        android:id="@+id/subjects_btn_save"
+        android:layout_width="179dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginLeft="116dp"
 
-                app:layout_constraintStart_toEndOf="@+id/subjects_btn_close"
-                app:layout_constraintTop_toBottomOf="@+id/notification_msg" />
+        android:layout_marginTop="24dp"
+        android:background="@drawable/textview_green_noborder"
+        android:text="@string/notification_btn_save"
+        android:textColor="@color/colorWhite"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/notification_msg" />
 
-            <Button
-                android:id="@+id/subjects_btn_close"
-                android:layout_width="100dp"
-                android:layout_height="60dp"
-                android:layout_marginStart="48dp"
-                android:layout_marginLeft="48dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="60dp"
-                android:layout_marginRight="60dp"
-                android:background="@drawable/textview_red_noborder"
-                android:text="@string/notification_btn_close"
-                android:textColor="@color/colorWhite"
 
-                app:layout_constraintEnd_toStartOf="@+id/subjects_btn_save"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/notification_msg" />
-
-            <EditText
-                android:id="@+id/subjects_heading"
-                android:layout_width="260dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="60dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@android:color/transparent"
-                android:clickable="false"
-                android:editable="false"
-                android:ems="10"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:inputType="none"
-                android:text="@string/notification_heading"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </android.support.constraint.ConstraintLayout>
-    </ScrollView>
 </android.support.constraint.ConstraintLayout>
