--- a/app/src/main/res/layout/time.xml
+++ b/app/src/main/res/layout/time.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+*********************************************
+* CSIT321 - Prepareo
+* Author/s:		David, Alec, Lachlan, Connor, Adam
+*********************************************
+-->
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -56,7 +62,7 @@
         android:background="@drawable/owl_button_bg_next"
         android:drawableTop="@drawable/nextactivity"
         android:paddingTop="10dp"
-        android:text="Next Activity"
+        android:text="Load Activity"
         android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/endPick" />
@@ -115,6 +121,40 @@
         app:layout_constraintHorizontal_bias="0.54"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/catPick" />
+
+    <TextView
+        android:id="@+id/tv_twentyfour"
+        android:layout_width="49dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
+        android:text="24hr"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toStartOf="@+id/endPick"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/startPick"
+        app:layout_constraintTop_toBottomOf="@+id/subPick" />
+
+    <TextView
+        android:id="@+id/tv_twelve"
+        android:layout_width="49dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
+        android:text="12hr"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toStartOf="@+id/endPick"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/startPick"
+        app:layout_constraintTop_toBottomOf="@+id/subPick" />
 
 
 </android.support.constraint.ConstraintLayout>
